@@ -1,1 +1,1 @@
-syndie.version=0.915b
+syndie.version=0.916b
